--- a/tiredd/src/app/app.component.html
+++ b/tiredd/src/app/app.component.html
@@ -19,16 +19,10 @@
     </mat-form-field>
     <span *ngIf="hot">
       [ hot ]&nbsp;
-      <a
-        href="#"
-        (click)="hot = false; min = -20; max = hotScoreMin - 1; load()"
-        >new</a
-      >
+      <a href="#" (click)="switchToNew()">new</a>
     </span>
     <span *ngIf="!hot">
-      <a href="#" (click)="hot = true; min = hotScoreMin; max = 0; load()"
-        >hot</a
-      >
+      <a href="#" (click)="switchToHot()">hot</a>
       &nbsp;[ new ]
     </span>
   </div>
