--- a/tiredd/src/app/app.component.html
+++ b/tiredd/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div style="padding: 3em">
   <div style="margin-bottom: 1em">
     <span
-      style="font-size: 1.5em; font-weight: 700; color: 444; margin-right: 1em"
+      style="font-size: 1.5em; font-weight: 700; color: 444; margin-right: 2em"
       >TIREDD</span
     >
     <mat-form-field
       appearance="outline"
-      style="width: 200px; margin-right: 1em"
+      style="width: 200px; margin-right: 2em"
     >
       <mat-label>Sub</mat-label
       ><input
@@ -25,6 +25,14 @@
       <a href="#" (click)="switchToHot()">hot</a>
       &nbsp;[ new ]
     </span>
+    <span style="margin-left: 4em"
+      ><a href="https://github.com/crufter/tiredd">Soure code</a></span
+    >
+    <span style="margin-left: 2em"
+      ><a href="https://crufter.com/toy-open-source-reddit-clone"
+        >Blog post</a
+      ></span
+    >
   </div>
   <div flexLayout="row" fxLayout.lt-md="column" fxLayoutAlign="space-between">
     <div fxFlex="70%" fxFlex.lt-md="100%">
