--- a/tiredd/src/app/app.component.html
+++ b/tiredd/src/app/app.component.html
@@ -26,7 +26,7 @@
       &nbsp;[ new ]
     </span>
     <span style="margin-left: 4em"
-      ><a href="https://github.com/crufter/tiredd">Soure code</a></span
+      ><a href="https://github.com/crufter/tiredd">Source code</a></span
     >
     <span style="margin-left: 2em"
       ><a href="https://crufter.com/toy-open-source-reddit-clone"
