--- a/tiredd/src/app/app.component.html
+++ b/tiredd/src/app/app.component.html
@@ -169,7 +169,7 @@
         </mat-form-field>
         <br />
         <mat-form-field appearance="outline">
-          <mat-label>Content</mat-label
+          <mat-label>Content (optional)</mat-label
           ><textarea
             matInput
             name="content"
