--- a/tiredd/src/app/app.component.html
+++ b/tiredd/src/app/app.component.html
@@ -159,7 +159,7 @@
         </mat-form-field>
         <br />
         <mat-form-field appearance="outline">
-          <mat-label>Url</mat-label
+          <mat-label>Url (optional)</mat-label
           ><input matInput name="url" ngDefaultControl [(ngModel)]="post.url" />
         </mat-form-field>
         <br />
