Make logo clickable

--- a/tiredd/src/app/app.component.html
+++ b/tiredd/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div style="padding: 3em">
   <div style="margin-bottom: 1em">
     <span
-      style="font-size: 1.5em; font-weight: 700; color: 444; margin-right: 2em"
+      style="font-size: 1.5em; font-weight: 700; color: 444; margin-right: 2em; cursor: pointer"
+      (click)="sub = 'all'; switchToHot()"
       >TIREDD</span
     >
     <mat-form-field
